[package]
name = "rust_jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
argon2 = "0.5"
rand = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
jsonwebtoken = "9"
chrono = "0.4"